# simpline

./: CMakeLists.txt  README.md  simplineConfig.cmake.in
simpline/: ConstantSpeedSpline.cpp  Constants.h  ParametrizedSpline.cpp  Simpline.h
